@@ -11,7 +11,7 @@
 
 #include <stdarg.h>
 
-#if !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+#if !defined(__SDCC_mos6502) // Todo: enable when struct parameters are supported!
 struct tiny
 {
   char c;
@@ -52,7 +52,7 @@ void f (int n, ...)
 void
 testBug (void)
 {
-#if !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+#if !defined(__SDCC_mos6502) // Todo: enable when struct parameters are supported!
 #ifndef __OpenBSD__ // Known to fail on OpenBSD 7.3 powerpc64 (don't know for other OpenBSD versions or archs) reported to OpenBSD.
   m ();
 #endif
